docs: 스터디 레코드 완